--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,5 +1,5 @@
 /* Set min-height to avoid page reflow while session loading */
-.signedInStatus {
+.headerWrapper {
   display: block;
   min-height: 4rem;
   width: 100%;
@@ -11,10 +11,10 @@
   top: 0;
   opacity: 1;
   overflow: hidden;
-  border-radius: 0 0 .6rem .6rem;
-  padding: .6rem 1rem;
+  border-radius: 0 0 0.6rem 0.6rem;
+  padding: 0.6rem 1rem;
   margin: 0;
-  background-color: rgba(0,0,0,.05);
+  background-color: rgba(0, 0, 0, 0.05);
   transition: all 0.2s ease-in;
 }
 
@@ -26,13 +26,13 @@
 .signedInText,
 .notSignedInText {
   position: absolute;
-  padding-top: .8rem;
+  padding-top: 0.8rem;
   left: 1rem;
   right: 6.5rem;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
-  display: inherit;  
+  display: inherit;
   z-index: 1;
   line-height: 1.3rem;
 }
@@ -55,17 +55,19 @@
 .button,
 .buttonPrimary {
   float: right;
-  margin-right: -.4rem;
+  margin-right: -0.4rem;
   font-weight: 500;
-  border-radius: .3rem;
+  border-radius: 0.3rem;
   cursor: pointer;
-  font-size: 1rem;
+  font-size: 1.5rem;
   line-height: 1.4rem;
-  padding: .7rem .8rem;
+  padding: 0.7rem 0.8rem;
   position: relative;
   z-index: 10;
   background-color: transparent;
   color: #555;
+  width: 10rem;
+  text-align: center;
 }
 
 .buttonPrimary {
@@ -73,11 +75,20 @@
   border-color: #346df1;
   color: #fff;
   text-decoration: none;
-  padding: .7rem 1.4rem;
+  padding: 0.7rem 1.4rem;
 }
 
-.buttonPrimary:hover {
-  box-shadow: inset 0 0 5rem rgba(0,0,0,0.2)
+.button {
+  border-color: #363636;
+  background-color: #363636;
+  color: #fff;
+  text-decoration: none;
+  padding: 0.7rem 1.4rem;
+}
+
+.buttonPrimary:hover,
+.button:hover {
+  box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.2);
 }
 
 .navItems {
